# wasapi

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  todo.txt
examples/: demo.endpoint
scripts/: format.sh  run_all_tests.sh  test_cookies.sh  test_json.sh  test_multipart.sh  test_urlencoded.sh  test_websocket.sh  test_ws_plain_http.sh
src/: CMakeLists.txt  config.cpp  config.h  dynamic_variable.cpp  dynamic_variable.h  fastcgi.cpp  fastcgi.h  fcgi-connection.cpp  fcgi-connection.h  fileio.cpp  fileio.h  http.cpp  http.h  logger.cpp  logger.h  memory.cpp  memory.h  request.cpp  request.h  session.cpp  session.h  wasapi-server.cpp  websockets.cpp  websockets.h  worker.cpp  worker.h
